--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "antd": "^5.0.7",
     "axios": "^1.2.1",
     "chart.js": "^4.0.1",
+    "cloudinary": "^1.33.0",
     "echarts-for-react": "^3.0.2",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^7.6.19",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -22,8 +24,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
+    "sweetalert2": "^11.6.15",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
