--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.0.7",
     "axios": "^1.2.1",
+    "base-64": "^1.0.0",
     "chart.js": "^4.0.1",
     "cloudinary": "^1.33.0",
     "echarts-for-react": "^3.0.2",
@@ -21,11 +23,13 @@
     "react": "^18.2.0",
     "react-chakra-pagination": "^1.0.1",
     "react-chartjs-2": "^5.0.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-table": "^7.8.0",
     "sweetalert2": "^11.6.15",
     "video-react": "^0.16.0",
